--- a/photos/templates/photos/layout.html
+++ b/photos/templates/photos/layout.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 
 <head>
-    <title>{% block page_title %}Nalclip{% endblock %}</title>
+    <title>{% block page_title %}CloneTesting Page{% endblock %}</title>
     <meta charset="utf-8" />
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 </head>
